--- a/index.html
+++ b/index.html
@@ -14,32 +14,37 @@
         <div class="bg-white rounded-lg shadow-md p-12">
             <h1 class="text-3xl font-bold mb-4">我叫林煦伦，这是我的第一个网站</h1>
             <p class="text-lg mb-6">以下是我喜欢的电影</p>
-            <ul class="list-disc pl-6">
-                <li class="mb-3 text-lg">
-                    <a href="https://movie.douban.com/subject/1292063/" class="text-blue-600 hover:text-blue-800 hover:underline">搏击俱乐部</a>
+            <ul class="list-none p-0">
+                <li class="flex items-center mb-3">
+                    <img src="https://th.bing.com/th/id/R.7c9c5f6cf873c2df82564b765d9bee14?rik=EQgMPV0bCappgQ&riu=http%3a%2f%2f5b0988e595225.cdn.sohucs.com%2fimages%2f20180926%2fa912126b94f14dfa9c404a705808b588.jpeg&ehk=bbspuA5NBg3mKGHxOwypXe6TTUzdAKlsv0RMZeGTkpc%3d&risl=&pid=ImgRaw&r=0" alt="搏击俱乐部海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/1292063/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">搏击俱乐部</a>
                 </li>
-                <li class="mb-3 text-lg">
-                    <a href="https://movie.douban.com/subject/3215762/" class="text-blue-600 hover:text-blue-800 hover:underline">社交网络</a>
+                <li class="flex items-center mb-3">
+                    <img src="https://th.bing.com/th/id/R.b3b1950fc1daa9d5a187246996dff2d0?rik=wyowUKoNpFNL1Q&riu=http%3a%2f%2fvorcdn.xiaodutv.com%2f3f50ca276173f845d52d6cb6f1728943&ehk=EZVKMdysYb1NRavtKSwz%2bO3f8EF48V9CYQMTjATOqxk%3d&risl=&pid=ImgRaw&r=0" alt="社交网络海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/3215762/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">社交网络</a>
                 </li>
-                <li class="text-lg">
-                    <a href="https://movie.douban.com/subject/10493390/" class="text-blue-600 hover:text-blue-800 hover:underline">狂怒</a>
+                <li class="flex items-center">
+                    <img src="https://th.bing.com/th/id/OIP.k0i7wHoHJBPS3orqoQtu0QHaL1?cb=iwp1&rs=1&pid=ImgDetMain" alt="狂怒海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/10493390/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">狂怒</a>
                 </li>
             </ul>
             <p class="text-lg mt-6 mb-6">以下是我喜欢的游戏</p>
-            <ul class="list-disc pl-6">
-                <li class="mb-3 text-lg">
-                    <a href="https://movie.douban.com/subject/2051149/" class="text-blue-600 hover:text-blue-800 hover:underline">生化危机系列</a>
+            <ul class="list-none p-0">
+                <li class="flex items-center mb-3">
+                    <img src="https://th.bing.com/th/id/R.2c3433726b5d85aa155f09366c2d8de0?rik=p3XMWqI2XUBB4A&riu=http%3a%2f%2fimg.ggzuhao.com%2fimg%2fImgProc%2fProcImg%2fb1e54f29-8e3c-40c6-9945-300e8de12696.jpg&ehk=8eiNF%2fuswlW%2fiyhBGsqYJEGz5QcgSR6QwYuccr73lL8%3d&risl=&pid=ImgRaw&r=0" alt="生化危机系列海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/2051149/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">生化危机系列</a>
                 </li>
-                <li class="mb-3 text-lg">
-                    <a href="https://movie.douban.com/subject/26712682/" class="text-blue-600 hover:text-blue-800 hover:underline">赛博朋克2077</a>
+                <li class="flex items-center mb-3">
+                    <img src="https://th.bing.com/th/id/OIP.5lz3a5kc-X-RW9sXZpJhSwHaNK?cb=iwp1&rs=1&pid=ImgDetMain" alt="赛博朋克2077海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/26712682/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">赛博朋克2077</a>
                 </li>
-                <li class="text-lg">
-                    <a href="https://movie.douban.com/subject/25713674/" class="text-blue-600 hover:text-blue-800 hover:underline">最后的生还者</a>
+                <li class="flex items-center">
+                    <img src="https://th.bing.com/th/id/OIP.99ZgG2xtxNammGAmCZ4S7wHaHa?cb=iwp1&rs=1&pid=ImgDetMain" alt="最后的生还者海报" class="w-24 h-36 object-cover mr-4 rounded-md">
+                    <a href="https://movie.douban.com/subject/25713674/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">最后的生还者</a>
                 </li>
             </ul>
         </div>
     </div>
 </body>
 
-</html>
-    
+</html>    
