--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
             <ul class="list-none p-0">
                 <li class="flex items-center mb-3">
                     <img src="https://th.bing.com/th/id/R.7c9c5f6cf873c2df82564b765d9bee14?rik=EQgMPV0bCappgQ&riu=http%3a%2f%2f5b0988e595225.cdn.sohucs.com%2fimages%2f20180926%2fa912126b94f14dfa9c404a705808b588.jpeg&ehk=bbspuA5NBg3mKGHxOwypXe6TTUzdAKlsv0RMZeGTkpc%3d&risl=&pid=ImgRaw&r=0" alt="搏击俱乐部海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/1292063/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">搏击俱乐部</a>
+                    <a href="https://movie.douban.com/subject/1292000/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">搏击俱乐部</a>
                 </li>
                 <li class="flex items-center mb-3">
                     <img src="https://th.bing.com/th/id/R.b3b1950fc1daa9d5a187246996dff2d0?rik=wyowUKoNpFNL1Q&riu=http%3a%2f%2fvorcdn.xiaodutv.com%2f3f50ca276173f845d52d6cb6f1728943&ehk=EZVKMdysYb1NRavtKSwz%2bO3f8EF48V9CYQMTjATOqxk%3d&risl=&pid=ImgRaw&r=0" alt="社交网络海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/3215762/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">社交网络</a>
+                    <a href="https://movie.douban.com/subject/3205624/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">社交网络</a>
                 </li>
                 <li class="flex items-center">
                     <img src="https://th.bing.com/th/id/OIP.k0i7wHoHJBPS3orqoQtu0QHaL1?cb=iwp1&rs=1&pid=ImgDetMain" alt="狂怒海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/10493390/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">狂怒</a>
+                    <a href="https://movie.douban.com/subject/23331914/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">狂怒</a>
                 </li>
             </ul>
             <p class="text-lg mt-6 mb-6">以下是我喜欢的游戏</p>
             <ul class="list-none p-0">
                 <li class="flex items-center mb-3">
                     <img src="https://th.bing.com/th/id/R.2c3433726b5d85aa155f09366c2d8de0?rik=p3XMWqI2XUBB4A&riu=http%3a%2f%2fimg.ggzuhao.com%2fimg%2fImgProc%2fProcImg%2fb1e54f29-8e3c-40c6-9945-300e8de12696.jpg&ehk=8eiNF%2fuswlW%2fiyhBGsqYJEGz5QcgSR6QwYuccr73lL8%3d&risl=&pid=ImgRaw&r=0" alt="生化危机系列海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/2051149/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">生化危机系列</a>
+                    <a href="https://baike.baidu.com/item/%E7%94%9F%E5%8C%96%E5%8D%B1%E6%9C%BA/21438" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">生化危机系列</a>
                 </li>
                 <li class="flex items-center mb-3">
                     <img src="https://th.bing.com/th/id/OIP.5lz3a5kc-X-RW9sXZpJhSwHaNK?cb=iwp1&rs=1&pid=ImgDetMain" alt="赛博朋克2077海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/26712682/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">赛博朋克2077</a>
+                    <a href="https://baike.baidu.com/item/%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B2077/3306049" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">赛博朋克2077</a>
                 </li>
                 <li class="flex items-center">
                     <img src="https://th.bing.com/th/id/OIP.99ZgG2xtxNammGAmCZ4S7wHaHa?cb=iwp1&rs=1&pid=ImgDetMain" alt="最后的生还者海报" class="w-24 h-36 object-cover mr-4 rounded-md">
-                    <a href="https://movie.douban.com/subject/25713674/" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">最后的生还者</a>
+                    <a href="https://baike.baidu.com/item/%E6%9C%80%E5%90%8E%E7%94%9F%E8%BF%98%E8%80%85/9044421" class="text-blue-600 hover:text-blue-800 hover:underline text-lg">最后的生还者</a>
                 </li>
             </ul>
         </div>
